src/web/Jeffpardy.scss
/* ... */
div#scoreboard .scoreboardEntry.controllingTeam {
    border: 2px solid #FFD700;
    box-shadow: 0 0 15px rgba(255, 215, 0, 0.4);
}

div#scoreboard .scoreboardEntry.winningTeam {
    border: 2px solid #4CAF50;
    box-shadow: 0 0 15px rgba(76, 175, 80, 0.4);
}

div#scoreboard .scoreboardEntry .buzzerIndicator {
    height: 4px;
    background-color: transparent;
    transition: background-color 0.2s ease;
}

div#scoreboard .scoreboardEntry .buzzerIndicator.buzzerActive {
    background-color: #FFD700;
    box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
}


div#scoreboard .scoreboardEntry .buzzerIndicator.buzzedIn {
    background-color: #f44336;
    box-shadow: 0 0 8px rgba(244, 67, 54, 0.6);
}


div#scoreboard .scoreboardEntry .teamName {
    font-size: 1.6em;
    padding: 4px 8px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}


div#scoreboard .scoreboardEntry .score {
    font-size: 2.2em;
    padding: 6px 8px;
    color: #FFD700;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}


div.buzzerUserListView {
    display: flex;
    flex-direction: column;
    align-items: center;
}

div.buzzerUserListView ul.playerList {
    list-style: none;
    padding-left: 0px;
    text-align: center;
}

div.buzzerUserListView ul.playerList li {
    font-weight: bold;
}

div.buzzerUserListView ul.playerList ul {
    padding-left: 0;
}

div.buzzerUserListView ul.playerList ul li {
    font-weight: normal;
}

div#hostAnswerKey {
    background-color: white;
}

div.answerKeyRound div.answerKeyClues {
    display: grid;
    background-color: black;
    -webkit-print-color-adjust: exact;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    //grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
    width: 100%;
    box-sizing: border-box;
    grid-column-gap: 2px;
    grid-row-gap: 2px;
    padding: 2px;
    font-size: 8pt;

}

div.answerKeyRound div.answerKeyCategory {
    text-align: center;
    background-color: white;
    padding: 2px;
    margin-bottom: 2px;
}

div.answerKeyRound div.answerKeyCategory div.title {
    font-weight: bold;
}


div.answerKeyRound div.answerKeyClue {
    text-align: center;
    background-color: white;
    padding: 2px;
}

div.answerKeyRound div.answerKeyClue div.value {
    font-weight: bold;
}

div.answerKeyRound div.answerKeyClue div.clue {
    border-bottom: 1px solid black;
    white-space: pre-line;
}



/* main layout
----------------------------------------------------------*/
div.topPageNormal {
    display: flex;
    flex-direction: column;
    height: 100%;
}

/*   topSection container ===========================  */
.topSection {
    @extend %jeffpardyMainFont;

    padding-top: 5px;
    height: 70px;
    color: white;
    background: linear-gradient(180deg, lighten($colorBrown, 5) 0%, $colorBrown 100%);
    border-bottom: 1px solid rgba(255, 255, 255, 0.08);
    display: flex;
    flex-direction: column;
    align-content: center;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
}

.topSection .title {
    font-size: 2.5em;
    text-align: center;
}

.topSection .gameCode {
    font-size: 1em;
    text-align: center;
}

/*   middleSection container =========================  */
.middleSection {
    flex-grow: 1;
    display: flex;
}

.pageContent {
    flex-grow: 1;
    overflow-x: hidden;
    width: calc(100vw);
    display: flex;
    flex-direction: column;
}



/*----------------------------------------------------------------------------*/
/* Category Details
/*----------------------------------------------------------------------------*/
div#categoryDetails {
    padding: 10px;
    display: flex;
    flex-direction: row;
    height: 100%;
    box-sizing: border-box;
    align-content: center;
}

div#categoryDetails div#viewCategory {
    background-color: $colorGameBoard;
    color: white;
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    width: 33%;
    padding: 10px;
}

div#categoryDetails div#viewCategory h2 {
    text-align: left;
    margin: 0px;
}

div#categoryDetails div#viewCategory ul {
    padding-inline-start: 0px;
}

div#categoryDetails div#viewCategory li {
    list-style: none;
}

div#categoryDetails div#viewCategory li div.value {
    font-weight: bold;
}

div#categoryDetails div#viewCategory li div.clue {
    border-bottom: 1px solid white;
}

div#categoryDetails div#viewCategory li div.question {
    padding-bottom: 10px;
}

div#categoryDetails div#changeCategory {
    display: flex;
    flex-direction: column;
    padding-left: 30px;
    flex-grow: 1;
}

div#categoryDetails div#changeCategory ul.categorySearchResults {
    height: 400px;
    overflow-y: scroll;
}

